<resources>
    <string name="app_name">Ecole des Loustics</string>
    <string name="u003c_retour"><![CDATA[< Retour]]></string>
    <string name="invit_e">Invité(e)</string>
    <string name="maths">Maths</string>
    <string name="explication_maths">Dans cette activité, tu vas devoir résoudre des opérations.</string>
    <string name="explication_multiplication">Multiplication : Choisis une table entre 1 et 10, réponds à toutes les questions, puis corrige tes erreurs si besoin.</string>
    <string name="explication_addition">Addition : Tu devras résoudre 10 additions simples, une par une.</string>
    <string name="multiplication">Multiplication</string>
    <string name="addition">Addition</string>
    <string name="x_1">x 1</string>
    <string name="x_2">x 2</string>
    <string name="x_3">x 3</string>
    <string name="x_4">x 4</string>
    <string name="x_5">x 5</string>
    <string name="x_6">x 6</string>
    <string name="x_7">x 7</string>
    <string name="x_8">x 8</string>
    <string name="x_9">x 9</string>
    <string name="x_10">x 10</string>
    <string name="valider">Valider</string>
    <string name="choisi_ta_table_de_multiplication">Choisi ta table de multiplication</string>
    <string name="corriger_mes_r_ponses">Corriger mes réponses</string>
    <string name="nombre_d_erreurs_0">Nombre d\'erreurs : 0</string>
    <string name="erreur_s">Erreur(s) !</string>
    <string name="choisir_une_autre_table">Choisir une autre table</string>
    <string name="u003c_menu_principal"><![CDATA[< Menu principal]]></string>
    <string name="f_licitations">Félicitations !</string>
    <string name="tu_connais_tes_tables">Tu connais tes tables.</string>
    <string name="_0">0</string>
    <string name="main_de_l_ordinateur">Main de l\'ordinateur</string>
    <string name="feuille">feuille</string>
    <string name="pierre">pierre</string>
    <string name="ciseaux">ciseaux</string>
    <string name="nombre_d_galit_s">Nombre d\'égalités :</string>
    <string name="choisir_une_main">Choisir une main</string>
    <string name="nombre_de_victoires">Nombre de victoires :</string>
    <string name="nombre_de_d_faites">Nombre de défaites :</string>
    <string name="ta_r_ponse">Ta réponse</string>
    <string name="question_1_10">Question 1/10</string>
    <string name="_1_1">1 + 1 = ?</string>
    <string name="ajouter_un_utilisateur">Ajouter un utilisateur</string>
    <string name="continuer_sans_compte">Continuer sans compte</string>
    <string name="aucun_utilisateur">Aucun utilisateur</string>
    <string name="qui_tes_vous">Qui êtes vous ?</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="ajouter">Ajouter</string>
    <string name="bonjour_utilisateur">Bonjour Utilisateur !</string>
    <string name="u003c_changer_d_utilisateur"><![CDATA[< Changer d\'utilisateur]]></string>
    <string name="culture_g_n_rale">Culture générale</string>
    <string name="chifoumi">Chifoumi</string>
    <string name="choisis_une_activit">Choisis une activité</string>
    <string name="commencer">Commencer</string>
    <string name="r_ponds_correctement_10_questions_de_culture_g_n_rale_nlis_bien_les_propositions_certaines_peuvent_tre_pi_geuses_nune_seule_bonne_r_ponse_par_question_nbonne_chance">Réponds correctement à 10 questions de culture générale !\nLis bien les propositions, certaines peuvent être piégeuses...\nUne seule bonne réponse par question.\nBonne chance !</string>
    <string name="question">Question</string>
    <string name="r_ponse_2">Réponse 2</string>
    <string name="r_ponse_3">Réponse 3</string>
    <string name="suivant">Suivant</string>
    <string name="r_ponse_1">Réponse 1</string>
    <string name="score">Score :</string>
</resources>