<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:background="@color/blue"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/additionBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkBlue"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_gravity="start"
            android:text="@string/u003c_retour" />

        <TextView
            android:id="@+id/utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="@string/invit_e"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/question_1_10"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_1_1"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/answer_input"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="number"
            android:hint="@string/ta_r_ponse"
            android:layout_marginBottom="24dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.579"/>

    </LinearLayout>
</LinearLayout>